--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "if-env": "^1.0.4",
-    "mongoose": "^5.9.25"
+    "lodash": "^4.17.19",
+    "mongoose": "^5.9.25",
+    "passport": "^0.4.1"
   }
 }
