--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.16.3",
+    "express-session": "^1.17.1",
     "faker": "^4.1.0",
     "if-env": "^1.0.4",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.25",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "dotenv": "^8.2.0",
+    "connect-mongo": "^3.2.0"
   }
 }
