--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "react-scripts": "^2.1.1",
     "react-router-dom": "^5.2.0",
     "bootstrap": "^4.5.0",
-    "react-bootstrap": "^1.3.0"
+    "react-bootstrap": "^1.3.0",
+    "axios": "^0.19.2",
+    "lodash": "^4.17.19"
   },
   "scripts": {
     "start": "react-scripts start",
