--- a/package.json
+++ b/package.json
@@ -29,6 +29,13 @@
     "mongoose": "^5.9.25",
     "passport": "^0.4.1",
     "dotenv": "^8.2.0",
-    "connect-mongo": "^3.2.0"
+    "connect-mongo": "^3.2.0",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "moment": "^2.27.0",
+    "passport-local": "^1.0.0",
+    "validator": "^13.1.1"
   }
 }
